weird caption align bug fixed

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ footer p {
 .carousel-caption {
   color: #000 !important; /* Change this to any color you prefer */
   position: relative; /* Override the absolute positioning */
-  transform: none; /* Remove the transform */
   bottom: auto; /* Remove the bottom positioning */
   text-align: center; /* Center the text */
   left: 280px; /* Add this line */
